# tana

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  vitest.config.js
.github/workflows/: build.yml
docker/: Dockerfile  entrypoint.sh
docs/: DESIGN.md  DETAIL-VIEW-SORT.md  DOCKER.md  PREVIEW.md  REQUIREMENTS.md  STATUS.md
src/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/js/: app.js  backend.js
src/js/__tests__/: conflictdialog.test.js  favorites.test.js  favoritesview.test.js  fileops.test.js  filepane-contextmenu.test.js  filepane-dblclick.test.js  filepane.test.js  fontscale.test.js  help.test.js  inputdialog.test.js  menu-nav.test.js  menubar.test.js  panes.test.js  pathnav.test.js  preview-markdown.test.js  preview-render.test.js  preview.test.js  previewkind.test.js  previewplacement.test.js  safemode.test.js  selection.test.js  session.test.js  settings.test.js  sort.test.js  sortstate.test.js  theme.test.js  toast.test.js  updater.test.js
src/js/core/: conflictdialog.js  favorites.js  favoritesview.js  fileops.js  filepane.js  fontscale.js  help.js  inputdialog.js  menu-nav.js  menu.js  menubar.js  panes.js  pathnav.js  preview.js  previewkind.js  previewplacement.js  safemode.js  selection.js  session.js  settings.js  sort.js  sortstate.js  theme.js  toast.js  updater.js
src/js/features/preview/: markdown.js  render.js
