[package]
name = "tana"
version = "0.1.0"
description = "Tana - A lightweight cross-platform file manager built with Tauri"
authors = ["dobachi"]
edition = "2021"

[lib]
name = "tana_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-cli = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "s"
